# link-checker

./: .dependabotbot.json  .gitignore  README.md  pyproject.toml  test_link_checker.py
.github/: CONTRIBUTING.md
.github/workflows/: mypy.yml
link_checker/: __init__.py  __main__.py
tests/: test_click.py  test_link_checker.py
