[tool.poetry]
name = "link-checker"
version = "0.0.1"
description = "Checks links"
authors = ["James Hogkinson <james@terminaloutcomes.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.2"
loguru = "^0.6.0"
aiohttp = "^3.8.1"
beautifulsoup4 = "^4.11.1"
lxml = "^4.9.0"

[tool.poetry.dev-dependencies]
pylint = "^2.14.3"
pytest = "^7.1.2"
mypy = "^0.961"
black = "^22.6.0"
pytest-simplehttpserver = "^0.1.2"
pytest-asyncio = "^0.18.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.MASTER]
max-line-length=200

# https://github.com/samuelcolvin/pydantic/issues/1961#issuecomment-759522422
#extension-pkg-whitelist=pydantic
#load-plugins=pylint_pydantic

[tool.poetry.scripts]
link-checker = "link_checker:cli"

[tool.pytest.ini_options]
addopts = "--simplehttpserver-directory ./"
asyncio_mode="strict"
